# Construction_safety

./: .gitignore  CMakeLists.txt  build_engine.bat  checklist.md  config.json  pm_test_db.sqlite  readme.md  run_engine.bat  safety_violations.db  seed_db.py  start_dashboard.bat
build_test/: CMakeCache.txt
conductor/: architecture.md  index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/config_deployment_20260128/: metadata.json  plan.md  spec.md
conductor/tracks/core_inference_20260127/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/live_streaming_20260130/: metadata.json  plan.md  spec.md
conductor/tracks/mqtt_integration_20260129/: metadata.json  plan.md  spec.md
conductor/tracks/persistence_alerting_20260129/: metadata.json  plan.md  spec.md
conductor/tracks/system_integration_20260128/: metadata.json  plan.md  spec.md
conductor/tracks/tracking_id_20260130/: metadata.json  plan.md  spec.md
conductor/tracks/web_dashboard_20260129/: metadata.json  plan.md  spec.md
src/: main.cpp
src/inference/: inference_engine.cpp  inference_engine.hpp  model_loader.cpp  model_loader.hpp
src/pipeline/: pipeline_manager.cpp  pipeline_manager.hpp  rtsp_source.cpp  rtsp_source.hpp
src/spatial/: spatial_mapper.cpp  spatial_mapper.hpp
src/tracking/: kalman_box_tracker.cpp  kalman_box_tracker.hpp  sort_tracker.cpp  sort_tracker.hpp
src/utils/: alert_throttler.cpp  alert_throttler.hpp  config_loader.cpp  config_loader.hpp  env_check.cpp  mjpeg_streamer.cpp  mjpeg_streamer.hpp  mqtt_client.cpp  mqtt_client.hpp  violation_logger.cpp  violation_logger.hpp  visualizer.cpp  visualizer.hpp
tests/infra/: test_env_check.py  test_scaffolding.py
tests/unit/: test_alert_throttler.cpp  test_config_loader.cpp  test_inference_engine.cpp  test_model_loader.cpp  test_mqtt_client.cpp  test_pipeline_manager.cpp  test_rtsp_source.cpp  test_sort_tracker.cpp  test_spatial_mapper.cpp  test_violation_logger.cpp  test_visualizer.cpp
web/: README.md
web/backend/: db.js  package-lock.json  package.json  server.js
web/frontend/: index.html  package-lock.json  package.json
web/frontend/src/: App.tsx  ZoneEditor.tsx  main.tsx
